[package]
name = "filelife"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive"] }
libbpf-rs = "0.19.1"
libbpf-sys = "1.0.4"
libc = "0.2.137"
object = "0.29.0"
plain = "0.2.3"
regex = "1.7.0"
time = { version = "0.3.17", features = ["formatting", "macros", "local-offset"] }

[build-dependencies]
libbpf-cargo = "0.13.1"
