[package]
name = "sslsnoop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.23"
clap = { version = "4.0.26", features = ["derive"] }
hexyl = "0.12.0"
libbpf-rs = { git = "https://github.com/libbpf/libbpf-rs" }
libbpf-sys = "1.0.4"
libc = "0.2.137"
plain = "0.2.3"
regex = "1.7.0"

[build-dependencies]
libbpf-cargo = "0.13.1"
