[package]
name = "writesnoop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
libbpf-rs = "0.24.8"
libbpf-sys = "1.5.0"
libc = "0.2.169"
regex = "1.11.1"

[build-dependencies]
anyhow = "1.0.95"
libbpf-cargo = "0.24.8"
